* Fixing manually entered tax amounts ignored printing invoice (Chris T, 864)
* Fixing deleting gl draft via gl screen fails (Chris T, 871)
* Fixing receipts listing "to pay" for amount (Chris T, 892)
* Setting->get() now works with named keys (Chris T)
* nginx sample configurations (P. Istvan)
* Fixed unable to delete ar vouchers (Chris T)
* Fixed copy to new scrambling lines (Chris T, 923)

Chris T is Chris Travers
Nick P is Nick Prater
Giovanni B is Giovanni Biscuolo
P. Istvan is Pongracz Istvan

Changelog for 1.3.35
* Fixed uninitialized value warnings when cached template enabled (Chris T)
* Fixed error in logs about failed login during initial login (Chris T, 858)
* Updated gnome2 stylesheet (Pongracz I)
* Updated Hungarian translation (Pongracz I)
* Fixed is_zero error on inventory activity report (Chris T)
* Fixed bug 861, receipts saying "pay from" cash account (Chris T)
* Dropped not null requirement on zip/mail codes (Chris T, 863)
* Fixed on hold throwing http 500 errors (Chris T and Nick P, 872)
* Fixed on hold not available for ar/ap transactions (Chris T, 838)
* Fixed single payments screen confusing (Chris T, 856)
* Fixed confusing error on tax form reports (Chris T, 883)
* Fixed unable to edit quotation.tex (Chris T, 885)
* Silenced warnings in Num2Text (Chris T)
* Fixed blank weights sometimes making invoices unprintable (Chris T)
* Fixed some bugs with SL2.8 to LedgerSMB upgrades (Chris T)
* Fixed encoding errors after sending email (Chris T, 884)
* Fixed spurious 0's in incorrect fields (Chris T, 889)
* Copy to New no longer copies payments (Chris T)
* Fixed '0' invoice number on customer history summary (Chris T)
* Added 'created on' date to invoices (Pongracz I)
* Condensed income statement and balance sheet for readability (Erik H)

Chris T is Chris Travers
Nick P is Nick Prater
Pongracz I is Pongracz Istvan
Erik H is Erik Huelsmann


Changelog for 1.3.34
* Fixed some SQL syntax issues on using overpayments (Chris T)